--- a/styles/base.css
+++ b/styles/base.css
@@ -23,12 +23,18 @@ main {
 
 /* styling the header */
 header {
-    height: 85px;
+    height: max-content;
     width: 90%;
     display: flex;
     margin: 0 auto;
     justify-content: space-between;
     align-items: center;
+
+    .logo {
+        width: 200px;
+        height: 100px;
+    }
+
 }
  
 /* styling the mid */
@@ -115,10 +121,17 @@ footer {
     height: 70px;
     display: flex;
     justify-content: space-between;
-    align-content: center;
-    padding: 10px 50px;
+    align-items: center;
+    padding: 0 50px;
     background-color: rgb(0, 38, 132);
-    color: #c8dcfd;
+
+
+    .inspiration {
+        width: 398px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
 
     p {
         background-color: rgb(0, 38, 132);
